--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,19 +8,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+      - uses: actions/checkout@v1
 
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2.8.0
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2.8.0
 
-    - name: Setup dependencies
-      run: flutter pub get
+      - name: Setup dependencies
+        run: flutter pub get
 
-    - name: Run tests
-      run: flutter test --coverage
+      - name: Run tests
+        run: flutter test --coverage
 
-    - name: Upload to coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.COVERALLS_TOKEN }}
-
+      - name: Upload to coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
