--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  runtime_type: ^1.0.1
+  runtime_type: ">=1.0.0 <2.0.0"
   shared_preferences: ">=2.0.0 <3.0.0"
 
 dev_dependencies:
